--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://github.com/diegoc29/goit-js-hw-09.git/",
+  "homepage": "https://diegoc29.github.io/goit-js-hw-09/", 
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-09.git/"
-  },
+    "build": "parcel build src/*.html --public-url /goit-js-hw-09/" 
+  }
+}
   "repository": {
     "type": "git",
     "url": "git+https://github.com/goitacademy/parcel-project-template.git"
